@startuml "UML Project"

skinparam monochrome flase 
skinparam handwritten false 
skinparam shadowing true
skinparam StereotypeABackgroundColor true
skinparam classAttributeIconSize 0

skinparam class{
    
    BackgroundColor grey
    BorderColor Black
    ArrowColor Black
}


class Estudiante {
+ codigoEstudiantil: int 
validarCod()
}


class Materia {
+ codigoM: int 
+ tipoM: String  
+ semestre: Tsemestre
+ nombreMat : String
+ numeroCred : int
+ mallacurricular: MallaCurricular
}

Class MallaCurricular { 
+ materias : malla[Materia]
mostrarMalla()
}

Class Semestre {
+ materias : txtS[Materia]
mostrarSemester()
}


Class Electiva { 
+ nombreElect : Nelectiva
+ tipoM: String
}

Class Obligatoria {
+ nombreA: String 
+ tipoM: String
}

Class ActividadesExtra {
+ tipo: String
mostrarActividades()
}

Class Rating {
mostrarRating()
addSubject()
}



MallaCurricular "1..*" *---"many  " Materia :  < go in 
Semestre " 1..*" *--- "     many" Materia :  < go in 
Materia "  * " <|--- "  1..*  " Obligatoria
Materia "1..*    " <|--- "   *" Electiva
Estudiante "1..*" --* "1  " ActividadesExtra
Materia - Rating
Estudiante -- MallaCurricular



@enduml
